--- a/Departments/ASGE/ASGE_SYLLABUS.html
+++ b/Departments/ASGE/ASGE_SYLLABUS.html
@@ -112,15 +112,15 @@
             <div id="asge_syllabus">
                 <h2 id="fe_Sylabus">Syllabus</h2>
                 <div class="syllabus_links">
-                   <div class="syllabus_1">
+                   <div class="syllabus_1" id="syllabus_final">
                         <img src="vector 2.png" alt="">
                         <a class="syllabus_links_sppu" href="https://www.aitpune.com/Documents/ASGE/First%20Year%20Engineering%202019%20Patt.%20Structure_05.072019.pdf" target="_blank">Revised Structure For First Year Bachelor of Engineering (Choice Based Credit System) (2019 Course)</a>
                    </div>
-                    <div class="syllabus_1">
+                    <div class="syllabus_1" id="syllabus_final">
                         <img src="vector 2.png" alt="">
                         <a class="syllabus_links_sppu" href="https://www.aitpune.com/Documents/ASGE/First%20Year%20Engineering%202019%20Patt.Syllabus_05.072019.pdf" target="_blank">Curriculum For First Year Bachelor of Engineering (Choice Based Credit System) (2019 Course)</a>
                     </div>
-                   <div class="syllabus_1">
+                   <div class="syllabus_1" id="syllabus_final">
                         <img src="vector 2.png" alt="">
                         <a class="syllabus_links_sppu" href="https://www.aitpune.com/Documents/ASGE/Democracy,%20Election%20%20and%20Governance%20Syllabus.pdf" target="_blank">Syllabus of Democracy, Election and Governance Subject</a>
                    </div>
