--- a/Departments/ENTC/ENTC_ACTIVITIES.html
+++ b/Departments/ENTC/ENTC_ACTIVITIES.html
@@ -146,7 +146,7 @@
             </section>
             
             <div id="activity_content">
-                <h2 style="margin-bottom: 40px;">Activities</h2>
+                <h2 style="margin-bottom: 30px;">Activities</h2>
                 <div class="indp">
                     <div class="indp_content">
                         <div class="indc1">WORKSHOPS/ SEMINARS/GUEST LECTURES ATTENDED FOR STAFF</div>
@@ -177,7 +177,7 @@
                         </div> 
                     </div>
                 </div>
-                <div class="indp2">
+                <div class="indp">
                     <div class="indp_content">
                         <div class="indc1">VALUE ADDED COURSES</div>
                         <div class="tab">
@@ -192,7 +192,7 @@
                     </div>
                 </div>
 
-                <div class="indp3">
+                <div class="indp">
                     <div class="indp_content">
                         <div class="indc1">Workshops/ Seminars/Guest Lectures: Organized</div>
                         <div class="tab">
