--- a/Departments/ENTC/ENTC_FACULTY&STAFF.html
+++ b/Departments/ENTC/ENTC_FACULTY&STAFF.html
@@ -1554,12 +1554,12 @@
                        
 
 
-                        <div class="faculty-heading" style="margin-bottom: 15px; margin-left: 30px;">
+                        <div class="faculty-heading" style="margin-bottom: 15px;">
                             <p style=" margin-bottom: 1rem; font-size: 1.5rem; color: #4C6BF1;">Faculty Summary</p>
                             <div class="indp" style="height: 20rem;">
                                 <div class="indp_content">
                                     <div class="indc1">Academic Year</div>
-                                    <div class="tab">
+                                    <div class="tab" id="tabbu">
                                         <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-FACULTY%2FETC_Faculty%20list_23-24.pdf?alt=media&token=a380088b-fff4-4eb0-b52b-04f8f9e21ed5">2023-24</a></div>
                                         <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-FACULTY%2FETC_Faculty%20list_22-23.pdf?alt=media&token=2806e858-f37b-4fa4-bd28-a84fdb3673c1">2022-23</a></div>
                                         <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-FACULTY%2FETC_Faculty%20list_21-22.pdf?alt=media&token=954d4c8b-31c8-401e-8613-fb0574d32c91">2021-22</a></div> 
