--- a/Departments/ENTC/ENTC_RESEARCH.html
+++ b/Departments/ENTC/ENTC_RESEARCH.html
@@ -111,10 +111,10 @@
                 </ul>
             </section>
             <div id="RandD">
-                <h1>
+                <h2>
                     Research & Development
-                </h1>
-                <h6 style="margin-top: 30px; margin-bottom: 20px;">
+                </h2>
+                <h6 style="margin-top: 30px; margin-bottom: 20px; color: #6D6D6D;">
                     Paper/ Patents Presented/ Published by Staff
                 </h6>
                 <div class="pub">
