--- a/Departments/IT/IT_ACTIVITIES.html
+++ b/Departments/IT/IT_ACTIVITIES.html
@@ -115,7 +115,7 @@
                 <div class="activities_contain">
                     <h3>Department Activities</h3>
                     <div class="project_more">
-                        <p style="color: #000; font-size: 1.25rem; font-weight: 500;">AICTE sponsored National Conference on Communication, Computational Intelligence and Learning-2021 (NCCCIL 21)</h4></p>
+                        <p id="act_aicte">AICTE sponsored National Conference on Communication, Computational Intelligence and Learning-2021 (NCCCIL 21)</h4></p>
                         <div class="special_u" style="margin-top: 0.8rem;">
                             <div class="su_img">
                                  <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem; margin-top: 0.1rem;">
@@ -147,10 +147,10 @@
                 </div>
                 <div class="indp">
                     <div class="indp_content">
-                        <div class="indc1">Guest Lectures/ Seminars/ Workshops Organised</div>
+                        <div class="indc1">Guest Lectures/ Seminars/ Workshops</div>
                         <div class="tab">
                             <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FGuest%20Lectures%20Seminars%20Workshops%20Organised%20-%202022-23.pdf?alt=media&token=292f2336-e6c0-41db-91dc-a25d3bcd1550" target="_blank">2022-2023</a></div>
-                            <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FFACULTY%20INTERACTION%20WITH%20OUTSIDE%20WORLD-2022-23.pdf?alt=media&token=ce914f38-38a5-4129-95d2-e6bc56073976" target="_blank"></a></div>
+                            <!-- <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FFACULTY%20INTERACTION%20WITH%20OUTSIDE%20WORLD-2022-23.pdf?alt=media&token=ce914f38-38a5-4129-95d2-e6bc56073976" target="_blank"></a></div> -->
                             <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FFACULTY%20INTERACTION%20WITH%20OUTSIDE%20WORLD-2021-22.pdf?alt=media&token=76604313-ae9a-4ba3-935f-02870da34f51" target="_blank">2021-2022</a></div>
                             <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FFACULTY%20INTERACTION%20WITH%20OUTSIDE%20WORLD-2020-21.pdf?alt=media&token=90861201-3753-49f9-9dcd-81a61081a139" target="_blank">2020-2021</a></div>
                             <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FGuest%20Lectures%20Seminars%20Workshops%20Organised%20-%202018-19.pdf?alt=media&token=daf76347-c2af-4bb7-bc4a-31c858057c83" target="_blank">2019-2020</a></div>
@@ -187,7 +187,7 @@
                             <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FStudent%20Achievements%202018-19.pdf?alt=media&token=9123f1d1-701a-44ff-a584-dcd66b32622c" target="_blank">2018-2019</a></div>
                             <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FStudent%20Achievements%20-%202017-18.pdf?alt=media&token=1f480307-4d87-4d2b-990a-0b1b46a1261e" target="_blank">2017-2018</a></div>
                             <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FStudent%20Achievements%20-%202016-17.pdf?alt=media&token=ffaf4253-545a-480d-b2dc-038fd7a76dcc" target="_blank">2016-2017</a></div>
-                            <div class="t1"><a href="<div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FStudent%20Achievements%20-%202016-17.pdf?alt=media&token=ffaf4253-545a-480d-b2dc-038fd7a76dcc" target="_blank">2015-2016</a>
+                            <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FStudent%20Achievements%20-%202016-17.pdf?alt=media&token=ffaf4253-545a-480d-b2dc-038fd7a76dcc" target="_blank">2015-2016</a>
                             <div>
                             
                              
