--- a/Departments/MECH/MECH_FACULTY&STAFF.html
+++ b/Departments/MECH/MECH_FACULTY&STAFF.html
@@ -915,7 +915,7 @@
                             <div class="indp" style="height: 20rem;">
                                 <div class="indp_content">
                                     <div class="indc1">Academic Year</div>
-                                    <div class="tab">
+                                    <div class="tab" id="tabbu">
                                         <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-FACULTY%2F23-24.pdf?alt=media&token=654c4c03-5d22-42f1-ba95-77f134e1b9e7">2023-24</a></div>
                                         <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-FACULTY%2F22-23.pdf?alt=media&token=1751b4ae-a425-43dc-b614-93788fa29676">2022-23</a></div>
                                         <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-FACULTY%2F21-22.pdf?alt=media&token=62e0897f-bc1b-40c0-a05d-275721ac400d">2021-22</a></div> 
