--- a/Departments/ASGE/ASGE_ACTIVITIES.html
+++ b/Departments/ASGE/ASGE_ACTIVITIES.html
@@ -146,34 +146,51 @@
             
             <div id="activity_content">
                 <h2 style="margin-bottom: 30px;">Activities</h2>
-                <div class="indp">
-                    <div class="indp_content">
-                        <div class="indc1">Induction Program 2023-24</div>
-                        <div class="tab">
-                            <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20INDUCTION%202023-24%20Week%201.pdf?alt=media&token=98daa42e-ce4b-406a-9a8f-08553a166c0c" target="_blank">Program Week 1</a></div>
-                            <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20INDUCTION%202023-24%20Week%202.pdf?alt=media&token=318a7921-950c-4268-be82-a89321e0b6e3" target="_blank">Program Week 2</a></div>
-                            <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20INDUCTION%202023-24%20Week%203.pdf?alt=media&token=5333e5ed-2267-4abd-8ff0-33741f4f2ce2" target="_blank">Program Week 3</a></div> 
-                        </div> 
+                <div class="project_more">
+                    <div class="project_div">Induction Program 2023-24</div>
+                    <div class="project_link">
+                        <img src="vector 2.png" alt="">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20INDUCTION%202023-24%20Week%201.pdf?alt=media&token=98daa42e-ce4b-406a-9a8f-08553a166c0c" target="_blank">Program Week 1</a>
+                    </div>
+                    <div class="project_link">
+                        <img src="vector 2.png" alt="">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20INDUCTION%202023-24%20Week%202.pdf?alt=media&token=318a7921-950c-4268-be82-a89321e0b6e3" target="_blank">Program Week 2</a>
+                    </div>
+                    <div class="project_link">
+                        <img src="vector 2.png" alt="">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20INDUCTION%202023-24%20Week%203.pdf?alt=media&token=5333e5ed-2267-4abd-8ff0-33741f4f2ce2" target="_blank">Program Week 3</a>
                     </div>
                 </div>
-                <div class="indp">
-                    <div class="indp_content">
-                        <div class="indc1">Induction Program 2022-23</div>
-                        <div class="tab">
-                            <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20program%20Week1%2022-23.pdf?alt=media&token=e288cde7-8ccf-4250-81be-2979963f5f4b" target="_blank">Program Week1</a></div>
-                            <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20program%20Week2%2022-23.pdf?alt=media&token=58299b30-6f36-4dcb-a2ed-dee09fdb6fef" target="_blank">Program Week2</a></div>
-                            <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20program%20Week3%2022-23.pdf?alt=media&token=e132bbb3-8c75-4942-aeff-bd850bb9416f" target="_blank">Program Week3</a></div> 
-                        </div> 
+
+                <div class="project_more">
+                    <div class="project_div">Induction Program 2022-23</div>
+                    <div class="project_link">
+                        <img src="vector 2.png" alt="">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20program%20Week1%2022-23.pdf?alt=media&token=e288cde7-8ccf-4250-81be-2979963f5f4b" target="_blank">Program Week1</a>
+                    </div>
+                    <div class="project_link">
+                        <img src="vector 2.png" alt="">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20program%20Week2%2022-23.pdf?alt=media&token=58299b30-6f36-4dcb-a2ed-dee09fdb6fef" target="_blank">Program Week2</a>
+                    </div>
+                    <div class="project_link">
+                        <img src="vector 2.png" alt="">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20program%20Week3%2022-23.pdf?alt=media&token=e132bbb3-8c75-4942-aeff-bd850bb9416f" target="_blank">Program Week3</a>
                     </div>
                 </div>
-                <div class="indp">
-                    <div class="indp_content">
-                        <div class="indc1">Induction Program 2021-2022</div>
-                        <div class="tab">
-                            <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20program%20Week1%2021-22.pdf?alt=media&token=dfda6f1f-da71-43c7-8630-8dd2e8a43bee" target="_blank">Program Week1</a></div>
-                            <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20program%20Week2%2021-22.pdf?alt=media&token=daac24a2-b83b-4bd8-8483-0993eab55cab" target="_blank">Program Week2</a></div>
-                            <div class="t1"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20Program%20Week3%2021-22.pdf?alt=media&token=c2fa4672-f4e2-4320-a8f8-0fe8473f0e05" target="_blank">Program Week3 </a></div> 
-                        </div> 
+
+                <div class="project_more">
+                    <div class="project_div">Induction Program 2021-22</div>
+                    <div class="project_link">
+                        <img src="vector 2.png" alt="">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20program%20Week1%2021-22.pdf?alt=media&token=dfda6f1f-da71-43c7-8630-8dd2e8a43bee" target="_blank">Program Week1</a>
+                    </div>
+                    <div class="project_link">
+                        <img src="vector 2.png" alt="">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20program%20Week2%2021-22.pdf?alt=media&token=daac24a2-b83b-4bd8-8483-0993eab55cab" target="_blank">Program Week2</a>
+                    </div>
+                    <div class="project_link">
+                        <img src="vector 2.png" alt="">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-ACTIVITIES%2FFE%20Induction%20Program%20Week3%2021-22.pdf?alt=media&token=c2fa4672-f4e2-4320-a8f8-0fe8473f0e05" target="_blank">Program Week3 </a>
                     </div>
                 </div>
             </div>
