--- a/Departments/IT/IT_RESEARCH.html
+++ b/Departments/IT/IT_RESEARCH.html
@@ -111,9 +111,9 @@
                 </ul>
             </section>
             <div id="RandD">
-                <h1 style="color: #0C2695; font-size: 2rem;">
+                <h2 id="Res_dev">
                     Research & Development
-                </h1>
+                </h2>
                 <h6 style="color: #6D6D6D; margin-top: 30px; margin-bottom: 20px;">
                     Paper/ Patents Presented/ Published by Staff
                 </h6>
