--- a/COMP_DEP.html
+++ b/COMP_DEP.html
@@ -58,8 +58,8 @@
       <div class="empty" style="height: 120px;width: 100%;"></div>
     <div class="header3">
             <div class="show">
-                <p class="a">Information Technology</p>
-                <p class="b"> "Empowering Campus Innovation Through Technology." </p>
+                <p class="a">Computer Engineering</p>
+                <p class="b">"Empowering the campus through technology: Your digital journey starts here with our Department."</p>
                 <p class="c"> <a href="#main">Explore</a> </p>
             </div>
         </div>
@@ -68,14 +68,14 @@
             <div class="main_content">
                 <h2 class="ab" style="text-align: left;">About</h2>
                 <p class="about_vision">Vision</p>
-                <p class="about_content">We strive to empower the students with knowledge of all basic engineering and applied science subjects and to provide avenues for development of their physical, intellectual, emotional and spiritual quotients.</p>
+                <p class="about_content">To provide best quality education and research facilities to the wards of army personnel to produce globally competent computer engineering graduates.</p>
                 <p class="about_mission">Mission</p>
                 <div class="about_list">
                     <ul>
-                        <li>To provide a stimulating learning environment and state of the art infrastructure with the aim of providing a sound foundation to their engineering studies.</li>
-                        <li>To develop creative thinking and inculcate a habit of lifelong learning in students.</li>
-                        <li>To encourage the faculty to acquire latest technical knowledge and pedagogical techniques.</li>
-                        <li>To strive for a holistic personality development of students.</li>
+                        <li>M1: To provide state of the art infrastructure to the wards of army personnel to produce total quality computer engineer</li>
+                        <li>M2: To create an environment which can promote the culture of research, innovation, creative, thinking, and higher studies</li>
+                        <li>M3: To collaborate with industry fraternity to create entrepreneurs and technology leaders who are committed towards sustainable development of information society</li>
+                        <!-- <li>To strive for a holistic personality development of students.</li> -->
                     </ul>
                 </div>
             </div>
