--- a/MECH_DEPT.html
+++ b/MECH_DEPT.html
@@ -58,8 +58,8 @@
       <div class="empty" style="height: 120px;width: 100%;"></div>
     <div class="header3">
             <div class="show">
-                <p class="a">Information Technology</p>
-                <p class="b"> "Empowering Campus Innovation Through Technology." </p>
+                <p class="a">Mechanical Engineering</p>
+                <p class="b"> "From Blueprint to Reality: Mechanical Marvels at AIT." </p>
                 <p class="c"> <a href="#main">Explore</a> </p>
             </div>
         </div>
@@ -68,14 +68,14 @@
             <div class="main_content">
                 <h2 class="ab" style="text-align: left;">About</h2>
                 <p class="about_vision">Vision</p>
-                <p class="about_content">We strive to empower the students with knowledge of all basic engineering and applied science subjects and to provide avenues for development of their physical, intellectual, emotional and spiritual quotients.</p>
+                <p class="about_content">Emerge as a globally recognized provider of Mechanical Engineering education and solutions</p>
                 <p class="about_mission">Mission</p>
                 <div class="about_list">
                     <ul>
-                        <li>To provide a stimulating learning environment and state of the art infrastructure with the aim of providing a sound foundation to their engineering studies.</li>
-                        <li>To develop creative thinking and inculcate a habit of lifelong learning in students.</li>
-                        <li>To encourage the faculty to acquire latest technical knowledge and pedagogical techniques.</li>
-                        <li>To strive for a holistic personality development of students.</li>
+                        <li>M1: Provide an environment for developing intellectual, emotional, physical and spiritual quotients that are essential to produce total quality engineers</li>
+                        <li>M2: Establish a platform that fosters a culture of creativity, research, innovation and life-long learning</li>
+                        <li>M3: Become a centre of excellence that creates technology leaders and entrepreneurs committed towards sustainable development of society</li>
+                        <!-- <li>To strive for a holistic personality development of students.</li> -->
                     </ul>
                 </div>
             </div>
