--- a/ENTC_DEPARTMENT.html
+++ b/ENTC_DEPARTMENT.html
@@ -58,8 +58,8 @@
       <div class="empty" style="height: 120px;width: 100%;"></div>
     <div class="header3">
             <div class="show">
-                <p class="a">Information Technology</p>
-                <p class="b"> "Empowering Campus Innovation Through Technology." </p>
+                <p class="a">Electronics & Communication</p>
+                <p class="b"> "Currents of Creativity, Waves of Connectivity: Explore the Future with Us." </p>
                 <p class="c"> <a href="#main">Explore</a> </p>
             </div>
         </div>
@@ -68,14 +68,14 @@
             <div class="main_content">
                 <h2 class="ab" style="text-align: left;">About</h2>
                 <p class="about_vision">Vision</p>
-                <p class="about_content">We strive to empower the students with knowledge of all basic engineering and applied science subjects and to provide avenues for development of their physical, intellectual, emotional and spiritual quotients.</p>
+                <p class="about_content">To become "Internationally Recognized" center of excellence providing electronics & telecommunication engineering education & research facilities to the wards of defence personnel.</p>
                 <p class="about_mission">Mission</p>
                 <div class="about_list">
                     <ul>
-                        <li>To provide a stimulating learning environment and state of the art infrastructure with the aim of providing a sound foundation to their engineering studies.</li>
-                        <li>To develop creative thinking and inculcate a habit of lifelong learning in students.</li>
-                        <li>To encourage the faculty to acquire latest technical knowledge and pedagogical techniques.</li>
-                        <li>To strive for a holistic personality development of students.</li>
+                        <li>.Provide state-of-art facility, modern infrastructure and learning environment to the students and faculty in the department to meet growing challenges of electronics & allied industry.</li>
+                        <li>Equip students with fundamental knowledge & practical skills in electronics, communication & allied areas to excel in professional career & lifelong learning.</li>
+                        <li>.Foster research and innovation in electronics & telecommunication engineering by collaborating with industry and R&D organizations.</li>
+                        <li>Develop intellectuals, entrepreneurs and technology leaders committed to contribute to the development of society and welfare of humanity.</li>
                     </ul>
                 </div>
             </div>
