--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
     
     <div class="header" id="header">
+
       <div class="head">
         <a href="index.html"><img src="AIT LOGO.png" alt="logo ait" style="width: 60px;"></a>
         <a href="index.html" style="text-decoration: none ; color: #0C2695;"><p>Army Institute of Technology, Pune</p></a>
@@ -39,15 +40,17 @@
         <a href="ResearchDean.html">Research</a>
         <a href="student.html">Students</a>
         <a href="ADMIN_AIT.html">Admin</a>  
-        <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" >
+        <a href="https://awesindia.com/" style="margin: 0;"><img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" ></a>
         </nav>
       </div>
 
       <div class="hamburger" onclick="menuView()">
+
       <div id = "hamburger">
       <img src="./img/icons/cancel.svg" alt="cancel">
       <img src="./img/icons/ham.svg" alt="ham">
       </div>
+
     </div>
 
     </div>
@@ -59,8 +62,8 @@
   <div class="empty" style="height: 120px;"></div>
    <!-- //////////////////////////////////////////////////// -->
    <div class="credit">
-    <p>National Institutional Ranking Framework, Engineering (Rank-band: 151-200) | NAAC Accredited | NBA Accreditation for all UG department | Best Professional College Award 2016-17 by SPPU | AICTE-CII Survey of Industry -linked institutes 2020, Rank -Gold | </p>
-    <p>National Institutional Ranking Framework, Engineering (Rank-band: 151-200) | NAAC Accredited | NBA Accreditation for all UG department | Best Professional College Award 2016-17 by SPPU | AICTE-CII Survey of Industry -linked institutes 2020, Rank -Gold | </p>
+    <p>National Institutional Ranking Framework, Engineering (Rank-band: 151-200) &nbsp; | &nbsp  NAAC Accredited &nbsp; | &nbsp NBA Accreditation for all UG department &nbsp; | &nbsp Best Professional College Award 2016-17 by SPPU &nbsp; | &nbsp AICTE-CII Survey of Industry -linked institutes 2020, Rank -Gold &nbsp; | &nbsp </p>
+    <p>National Institutional Ranking Framework, Engineering (Rank-band: 151-200) &nbsp; | &nbsp NAAC Accredited &nbsp; | &nbsp NBA Accreditation for all UG department &nbsp; | &nbsp Best Professional College Award 2016-17 by SPPU &nbsp; | &nbsp AICTE-CII Survey of Industry -linked institutes 2020, Rank -Gold &nbsp; | &nbsp </p>
   </div>
 
   <!-- //////////////////////////////////////////////////////////// -->
@@ -117,7 +120,7 @@
   </div>
 
   <div class="about">
-    <iframe class="player" src="https://www.youtube.com/embed/FOQm1JPJ7BI" frameborder="0" allowfullscreen></iframe>
+    <iframe class="player"src="https://www.youtube-nocookie.com/embed/FOQm1JPJ7BI?si=Qxox2wUOeEBvMJ6-&amp;controls=0" title="YouTube video player" frameborder="0"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <div class="content">
       <h4>About us</h3>
       <h2>Dedicated to the service of the nation</h2>
@@ -140,20 +143,21 @@
     </div>
     <div class="notices">
       <div class="card">
-        <h4>16 Oct 2023</h4>
-        <p>Walk in Interview - Asst Professor(Maths)</p>
+        <h4>Oct 2023</h4>
+        <p>FE SE InSem Examination Circular</p>
       </div>
       <div class="card">
-        <h4>16 Oct 2023</h4>
-        <p>Walk in Interview - Asst Professor(Maths)</p>
+        <h4>Oct 2023</h4>
+        <p>Non Payment of Fees</p>
       </div><div class="card">
-        <h4>16 Oct 2023</h4>
-        <p>Walk in Interview - Asst Professor(Maths)</p>
+        <h4>Oct 2023</h4>
+        <p>Notice for all SE to BE & ME(DS) Students</p>
       </div><div class="card">
-        <h4>16 Oct 2023</h4>
-        <p>Walk in Interview - Asst Professor(Maths)</p>
+        <h4>Sep 2023</h4>
+        <p>Admission SE to BE & ME (Data Sci) 2023-24</p>
       </div>
     </div>
+    <p class="bluebarb">View all</p>
   </div>
 
   <div class="campus">
@@ -193,16 +197,16 @@
       <div class="card">
         <img src="./img/campus 2.png" alt="event">
         <div class="des">
-          <h4>16 Oct 2023</h4>
-          <p>Event Name</p>
+          <h4>9-10 Feb 2024</h4>
+          <p>Innerve 8.0</p>
         </div>
       </div>
 
       <div class="card">
         <img src="./img/campus 2.png" alt="event">
         <div class="des">
-          <h4>16 Oct 2023</h4>
-          <p>Event Name</p>
+          <h4>14-25 Jan 2024</h4>
+          <p>Sports Aakriti</p>
         </div>
       </div>
 
@@ -223,6 +227,7 @@
       </div>
 
     </div>
+    <p class="bluebarb">View all</p>
   </div>
 
   <div class="importantLinks">
@@ -235,7 +240,7 @@
       <div class="logo">
       <div class="logoimg"><img src="diamond.png" alt="logo" height="40px" width="40px"></div>
       </div>
-      <div class="linkinfo"><u ><a style="color: white;" href="Mandatory.html">Compulsory</a></u></div>
+      <div class="linkinfo"><u ><a  href="Mandatory.html">Mandatory</a></u></div>
     </div>
     <div class="row">
       <div class="logo">
@@ -282,20 +287,21 @@
     </div>
     <div class="notices">
       <div class="card">
-        <h4>16 Oct 2023</h4>
-        <p>CQ - Procurement of Portable Microphone</p>
+        <h4>Feb 2023</h4>
+        <p>CQ - Procurement of 10KVA UPS for ME Lab</p>
       </div>
       <div class="card">
-        <h4>16 Oct 2023</h4>
-        <p>CQ - Procurement of Portable Microphone</p>
+        <h4>Feb 2023</h4>
+        <p>CQ - Procurement of PC for Thermal Engg Lab - II</p>
       </div><div class="card">
-        <h4>16 Oct 2023</h4>
-        <p>CQ - Procurement of Portable Microphone</p>
+        <h4>Feb 2023</h4>
+        <p>CQ - Requirement of Consultant </p>
       </div><div class="card">
-        <h4>16 Oct 2023</h4>
+        <h4>Jan 2023</h4>
         <p>CQ - Procurement of Portable Microphone</p>
       </div>
     </div>
+    <p class="bluebarb">See all</p>
   </div>
 
   
