ASGE correction done
done all the correction of ASGE page

--- a/ASGE_HOD_DESk.html
+++ b/ASGE_HOD_DESk.html
@@ -19,8 +19,8 @@
         <div class="topper">
           <div>
             <ul class="header_items">
-            <a href="ABOUT_US.html">About Us</a>
-            <a href="Alumini.html">Alumini</a>
+            <a href="index.html">Home</a>
+            <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
             <a href="ADMIN_AIT.html">Admin</a>
@@ -41,7 +41,7 @@
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
             <a href="ADMIN_AIT.html">Admin</a>  
-            <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" >
+            <a href="https://www.awesindia.com/"> <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" ></a>
             </nav>
           </div>
     
@@ -58,9 +58,9 @@
       <div class="empty" style="height: 120px;width: 100%;"></div>
     <div class="header3">
             <div class="show">
-                <p class="a">Information Technology</p>
-                <p class="b"> "Empowering Campus Innovation Through Technology." </p>
-                <p class="c"> <a href="#main">Explore</a> </p>
+                <p class="a">Applied Science & General Engineering</p>
+                <p class="b"> "Where theory meets application, our department sparks innovation for a brighter future." </p>
+                <p class="c"> <a href="#mainContent">Explore</a> </p>
             </div>
         </div>
        
@@ -72,7 +72,7 @@
                 <p class="about_mission">Mission</p>
                 <div class="about_list">
                     <ul>
-                        <li>To provide a stimulating learning environment and state of the art infrastructure with the aim of providing a sound foundation to their engineering studies.</li>
+                        <li>To provide a stimulating learning environment and state of the art infrastructure with the aim of providing a sound foundation to their engineering studies..</li>
                         <li>To develop creative thinking and inculcate a habit of lifelong learning in students.</li>
                         <li>To encourage the faculty to acquire latest technical knowledge and pedagogical techniques.</li>
                         <li>To strive for a holistic personality development of students.</li>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="about_image">
-                <img src="Rectangle 61.png">
+                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-FACULTY-IMG%2Fgroup%20pic.jpg?alt=media&token=3150913e-f680-4ae2-9f64-8f1d74e9eab9">
             </div>
         </div>
         <div id="box_hide" onclick="change_view()"></div>
@@ -114,7 +114,7 @@
                             <div class="hod_contain">
                                 <p class="hod_name" id="name_ofhod">Dr. (Mrs )Swati Kulkarni</p>
                                 <p class="hod_rank">Associate Professor and Head of Dept.</p>
-                                <div class="hod_mail"><span>Email :</span><a>hodasge@aitpune.edu.in</a></div>
+                                <div class="hod_mail"><span>Email :</span><a href="">hodasge@aitpune.edu.in</a></div>
                             </div>
                         </div>
 
