--- a/Departments/ASGE/ASGE_RESULT.html
+++ b/Departments/ASGE/ASGE_RESULT.html
@@ -122,7 +122,7 @@
                             <p>9.43 CGPA</p>
                         </div>
                         <div class="result_branch">
-                            <p>ASGE</p>
+                            <p>First</p>
                         </div>
                     </div>
 
@@ -135,7 +135,7 @@
                             <p>9.43 CGPA</p>
                         </div>
                         <div class="result_branch">
-                            <p>ASGE</p>
+                            <p>Second</p>
                         </div>
                     </div>
 
@@ -148,7 +148,7 @@
                             <p>9.30 CGPA</p>
                         </div>
                         <div class="result_branch">
-                            <p>ASGE</p>
+                            <p>Third</p>
                         </div>
                     </div>
 
