--- a/Departments/ENTC/ENTC_HOD_DESk.html
+++ b/Departments/ENTC/ENTC_HOD_DESk.html
@@ -148,7 +148,7 @@
                 <div id="hod_content">
                     <h2 class="head_ok">HOD's desk</h2>
                     <div class="hod_content2">
-                        <div class="hod_pic"><img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-IMAGES%2Fman.png?alt=media&token=e9335016-9aba-4c01-b649-d68a1d4f78f9" alt="">
+                        <div class="hod_pic"><img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-FACULTY%2FENTC-FACULTY-IMAGES%2F1R9A2086.jpg?alt=media&token=f4d8e1cf-1c08-49bb-a07b-6e9e2cb1b2b8" alt="Hod image">
                         </div>
                         <div class="hod_contain">
                             <p class="hod_name">Dr. G R Patil</p>
