library responsive done
Library responsive complete
correction in library page hone
added a hover effect at head

--- a/LIBRARY_ABOUT.html
+++ b/LIBRARY_ABOUT.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -107,12 +107,12 @@
                 <h2>About Library</h2>
                 <div class="lib_contain">
                     <div class="image_library">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-LIBRARY%2Flibrary%20Images%2Flibrary-entrance.jpg?alt=media&token=408e708b-d90b-4771-96f8-d447d1dc48b0" alt="">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-LIBRARY%2Flibrary%20Images%2Flibrary-study-room.jpg?alt=media&token=198a859e-33e2-4de7-96f7-288dca64b667" alt="">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-LIBRARY%2Flibrary%20Images%2Flibrary-book-section.jpg?alt=media&token=51b7985c-eea5-4752-a760-8d671815ab28" alt="">
                     </div>
 
-                    <div class="about_lib">
+                    <div class="about_lib" style="text-align: justify;">
                         <p>AIT has a well-stocked library having collection of books, national and international print journals and e-Resources. The state-of-art air conditioned reading hall provided with wi-fi facility has a seating capacity of 156. The Library maintains a separate reference collection consisting of encyclopedias, dictionaries, handbooks, data books, etc. It has a digital section having audio/video resources, CDs, CBT and NPTEL videos. This section also provides access to e- journals. Library is fully automated. OPAC search and reissue transactions are made available on Intranet and Internet.</p>
                     </div>
                     
@@ -156,7 +156,7 @@
                     </div>
                     <div class="it_labcard">
                         <div class="lab_cardleft">
-                            <h4 class="lab_cardleft_heading">Library Automation Features</h4>
+                            <h4 class="lab_cardleft_heading" id="card_left">Library Automation Features</h4>
                             <br>
                             <ul>
                                 <li>Fully Computerized database using SLIM 21 Software</li>
@@ -166,7 +166,7 @@
                         </div>
 
                         <div class="lab_cardleft">
-                            <h4 class="lab_cardleft_heading">Membership of Other Libraries</h4>
+                            <h4 class="lab_cardleft_heading" id="card_left">Membership of Other Libraries</h4>
                             <br>
                             <ul>
                                 <li>Jayakar Library,SP Pune University, Pune.</li>
