--- a/LIBRARY_LINKS.html
+++ b/LIBRARY_LINKS.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div class="container">
@@ -73,7 +73,7 @@
                 <div class="lib_stafftable">
 
                     <div class="project_more">
-                        <p  style="color: #4C6BF1;">Access to Question Paper and Mini Project</p>
+                        <p  style="color: #4C6BF1;" id="useful_link">Access to Question Paper and Mini Project</p>
                         <div class="project_link">
                             <img src="vector 3.png" alt="">
                             <a href="http://14.139.108.229/W27/login.aspx?ReturnUrl=/w27/Result/MMBrowser.aspx?ty=QuestionPaper" target="_blank">Question Paper</a>
@@ -85,7 +85,7 @@
                     </div>
 
                     <div class="project_more">
-                        <p  style="color: #4C6BF1;;">Access to subscribed e-resource</p>
+                        <p  style="color: #4C6BF1;" id="useful_link">Access to subscribed e-resource</p>
                         <div class="project_link">
                             <img src="vector 3.png" alt="">
                             <a href="https://www.knimbus.com/#/" target="_blank">Access to E-Resources through Knimbus platform</a>
@@ -104,7 +104,7 @@
                     </div>
 
                     <div class="project_more">
-                        <p  style="color: #4C6BF1;;">Access to open access e-resources</p>
+                        <p  style="color: #4C6BF1;" id="useful_link">Access to open access e-resources</p>
                         <div class="project_link">
                             <img src="vector 3.png" alt="">
                             <a href="https://nptel.ac.in/" target="_blank">NPTEL</a>
@@ -116,7 +116,7 @@
                     </div>
 
                     <div class="project_more">
-                        <p  style="color: #4C6BF1;;">Anti-plagiarism software</p>
+                        <p  style="color: #4C6BF1;" id="useful_link">Anti-plagiarism software</p>
                         <div class="project_link">
                             <img src="vector 3.png" alt="">
                             <a href="https://www.turnitin.com/login_page.asp?lang=en_us" target="_blank">Turnitin software for plagiarism check</a>
@@ -136,7 +136,7 @@
                     </div>
 
                     <div class="project_more">
-                        <p style="color: #4C6BF1;;">Other links</p>
+                        <p style="color: #4C6BF1;" id="useful_link">Other links</p>
                         <div class="project_link">
                             <img src="vector 2.png" alt="">
                             <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-LIBRARY%2Flibraryrules.pdf?alt=media&token=b7f3bddd-b780-4d3c-a290-03ceb6a8a665" target="_blank">Library Rules</a>
