--- a/LIBRARY_CONTACT.html
+++ b/LIBRARY_CONTACT.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -104,9 +104,9 @@
         </section>
         <div id="specificContent">
             <div class="generalinfo" >
-                <h2 style="margin-bottom: 40px;">Contact us</h2>
+                <h2 style="margin-bottom: 30px;">Contact us</h2>
                 <div class="project_more">
-                    <div class="project_link">
+                    <div class="contact1">
                         <img src="location.png" alt="">
                         <p>ARMY INSTITUTE OF TECHNOLOGY ,Dighi Hills,Pune-411015</p>
                     </div>
