--- a/LIBRARY_EJOUNRALS.html
+++ b/LIBRARY_EJOUNRALS.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -108,7 +108,7 @@
                 <div class="lib_stafftable">
 
                     <div class="project_more">
-                        <div class="project_link">
+                        <div class="project_link" id="jounarls">
                             <ul class="E-journals" style="margin-left: 1.2rem;">
                                 <li> <a href="http://www.jair.org/" target="_blank">Journal of Artificial Intelligence Research</a></li>
                                 <li><a href="http://www.jair.org/" target="_blank">Journal of Machine Learning Research</a></li>
