--- a/LIBRARY_RESOURCES.html
+++ b/LIBRARY_RESOURCES.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -104,7 +104,7 @@
         </section>
         <div id="specificContent">
             <div class="generalinfo" >
-                <h2>Library Staff Members</h2>
+                <h2>Library Resources</h2>
                 <div class="lib_stafftable">
                     <table id="myTable" style="margin-left: 0;">
                     <thead>
