--- a/ADMIN_Greivance.html
+++ b/ADMIN_Greivance.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="ADMIN.css">
+<link rel="stylesheet" href="IT.css">
 
 </head>
 <body>
@@ -116,26 +116,25 @@
                     <a href="ADMIN_Notices.html" class="fetchLink" data-elementid="exam_section">Admin Notices</a>
                 </ul>
             </section>
-            <div id="specificContent" style="width: 54.4rem;">
+            <div id="specificContent">
                 <div id="hod_content">
                     <h2 class="head_ok"  style="margin-bottom: -20px;"> Grievance Redressal </h2>
                     <br>
                     <div class="hod_content2">
-                        <p class="hod_rank" style="margin-top: 30px;  font-size: 1.25rem;"> Institute Level Grievance Redressal Committee has been constituted with the following objectives:</p>
+                        <p class="hod_rank"  id="Institute_para"> Institute Level Grievance Redressal Committee has been constituted with the following objectives:</p>
                     </div>
                     <br>
-                    <div class="items">
-                        <div style="display: flex; gap: 0.5rem;">
-                            <img src="right-arrow (3).png" alt="abc" height="10px" style="margin-top: 7px;">
-                            <p class="parra1">To introduce an impartial and fair mechanism for redressal of issues faced by students and staff</p>
+                    <div class="project_more" id="greivance">
+                        <div class="project_link" id="achieve_list">
+                            <ul id="items_list">
+                                <li>To introduce an impartial and fair mechanism for redressal of issues faced by students and staff</li>
+                                <li>To create a responsive attitude among students, teachers, and parents, thereby maintaining a positive environment in the campus</li>
+                            </ul>
                         </div>
-
-                        <div style="display: flex; gap: 0.5rem;">
-                            <img src="right-arrow (3).png" alt="abc" height="10px" style="margin-top: 7px;">
-                            <p class="parra1">To create a responsive attitude among students, teachers, and parents, thereby maintaining a positive environment in the campus</p>
-                        </div>
+                    </div>
                         <p class="parra2" style="margin-top: 14px; font-size: 1.25rem;">AIT Grievance Redressal Committee</p>
-                        <table id="myTable" style="margin-left: 0;">
+
+                        <table id="myTable" >
                             <thead>
                                 <td>Position</td>
                                 <td>Name</td>
@@ -160,8 +159,11 @@
                                 
                             </tbody>
                         </table>
-                        <a href="https://www.aitpune.com/images/hostel/hostel.pdf"><button id="but">Learn more</button></a>
-                    </div>
+                        
+                        <div class="elib_button" id="E-button">
+                            <a href="https://www.aitpune.com/images/hostel/hostel.pdf" target="_blank" id="but" style="text-decoration: none;">Learn More</a>
+                        </div>
+
                 </div>
             </div>    
         </div>
