--- a/ADMIN_JD.html
+++ b/ADMIN_JD.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="ADMIN.css">
+<link rel="stylesheet" href="IT.css">
 
 </head>
 <body>
@@ -120,10 +120,10 @@
                 <div id="hod_content">
                     <h2 class="head_ok">Joint Director’s Corner</h2>
                         <div class="hod_content2">
-                            <div class="hod_pic" style="border: none;"><img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-IMAGES%2Fman.png?alt=media&token=e9335016-9aba-4c01-b649-d68a1d4f78f9" height="100px" width="100px">
+                            <div class="hod_pic" style="border: none;"><img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-IMAGES%2Fman.png?alt=media&token=e9335016-9aba-4c01-b649-d68a1d4f78f9">
                         
                             </div>
-                            <div class="hod_contain">
+                            <div class="hod_contain" id="director_pic">
                                 <p class="hod_name">Col MK Prasad (Retd)</p>
                                 <p class="hod_rank">BE (Civil), ME (Str), PGDPM & HR, DBA (IIMA), DBC(CDAC)
                                     Jt Director, AIT</p>
