added images in home page

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <!-- ///////////////////////////////////////////////////////////////////////////////////////////////// -->
   <div class="Departments">
     <h1 align="center" style="color: #0C2695;">Departments</h1>
-    <p align="center">Navigate through the diverse academic landscape of our college by exploring the unique offerings and specialties of each department.</p>
+    <p>Navigate through the diverse academic landscape of our college by exploring the unique offerings and specialties of each department.</p>
     <div class="card-container">
       <div class="cards">
         <img src="./img/asge.png" alt="asge" class="logo">
